# olj-insights

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
data/: readme.md
data/sample/: olj-jobs-cleaned-50.csv  transformed_jobs.csv  transformed_jobs_50.csv
notebooks/: 1_cleaning.ipynb  2_transformation.ipynb  3_exploration copy.ipynb  3_exploration.ipynb
results/: 1_cleaning.html  2_transformation.html  3_exploration.html
scripts/: analysis.py  convert_to_csv.py  csv_sampler.py
utils/: date_extract.py  skill_extract.py
